fixed submit button not showing on certain resolutions

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,6 @@
 body {
 	font-family: copperplate, fantasy;
 	width: 100%;
-	height: 100%;
 	margin: 0px;
 	background-color: #F8F3E1;
 	position: absolute;
@@ -9,7 +8,7 @@ body {
 }
 
 #checkoutbody {
-	padding-bottom: 450px;
+	padding-bottom: 100px;
 }
 
 #navbar_div {
